# darkpyonix

./: README.md  pyproject.toml
kernel/darkpyonix/: __init__.py
kernel/darkpyonix/kernel/: __init__.py  __main__.py  kernel.py
kernel/darkpyonix/manager/: __init__.py  __main__.py  manager.py
