[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "darkpyonix"
version = "0.1.0"
description = "AI-optimized Python kernel with VS Code integration"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
]

[project.scripts]
darkpyonix = "darkpyonix.cli:main"

[tool.flit.module]
name = "darkpyonix"
path = "kernel/darkpyonix"
